Lightly narrowed the iframe, to avoid a horizontal scrollbar

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -227,7 +227,7 @@ input#anotherTask {
   background: url(/images/btn_anotherTask.png) top left no-repeat; width: 148px; height: 37px; display: block; text-indent: -9999em; border: none; 
 }
 
-iframe#task_frame {width: 100%; height: 800px; margin: 0; padding: 0; clear: both; margin-top: 10px;}
+iframe#task_frame {width: 99%; height: 800px; margin: 0; padding: 0; clear: both; margin-top: 10px;}
 
 form#new_user input#user_submit, form#new_user_session input#user_session_submit, form.edit_user input#update_button, button.openidBtn {  border: none; display: block; width: 137px; height: 44px; text-indent: -9999em; margin-top: 20px;}
 div#signin_options button.openidBtn{ margin-left: 0px;}
